--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@fontsource/lato": "^4.5.0",
     "@linode/api-v4": "^0.55.0",
     "@linode/validation": "0.4.0",
     "@material-ui/core": "^4.11.0",
@@ -50,7 +51,7 @@
     "luxon": "^1.24.1",
     "markdown-it": "^11.0.1",
     "md5": "^2.2.1",
-    "notistack": "^0.9.7",
+    "notistack": "^1.0.10",
     "novnc-node": "^0.5.3",
     "patch-package": "^6.1.0",
     "postinstall-postinstall": "^2.0.0",
